--- a/src/App.css
+++ b/src/App.css
@@ -12,14 +12,16 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  box-shadow: 1px 2.5px 1px 2.5px rgb(159, 158, 158);
+  box-shadow: 1px 5px 1px 2.5px rgb(159, 158, 158);
   margin: 1%;
+  font-family: 'Cormorant SC', serif;
 }
 
 .Icon {
   display: flex;
   width: 50%;
   align-items: center;
+  color: #61dbfb;
 }
 
 .toggle {
@@ -33,4 +35,22 @@
 .img {
   height: 50px;
   margin-left: 10%;
+}
+
+.main-Content {
+  margin: 5% 10%;
+  font-size: 2rem;
+  font-family: 'Cormorant SC', serif;
+  font-weight: 600;
+}
+
+li::marker {
+  color: #61dbfb;
+  font-size: 2.4rem;
+}
+
+.header {
+  text-decoration: underline;
+  font-size: 3rem;
+  font-weight: 700;
 }
